--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.8.1
+asttokens==2.4.1
+autopep8==2.3.1
+bcrypt==4.2.0
 black==24.4.2
 Brotli==1.1.0
 certifi==2024.6.2
@@ -7,8 +10,11 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.8
 cssselect2==0.7.0
+decorator==5.1.1
 defusedxml==0.8.0rc2
+Deprecated==1.2.14
 Django==5.0.6
+django-anymail==12.0
 django-appconf==1.0.6
 django-cors-headers==4.3.1
 django-templated-mail==1.1.1
@@ -16,43 +22,67 @@ django-user-accounts==3.3.2
 django_csp==3.8
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+djangorestframework-xml==2.0.0
 djoser==2.2.2
 drf-yasg==1.21.7
+executing==2.1.0
+fabric==3.2.2
 flake8==7.0.0
 fonttools==4.53.1
 html5lib==1.1
 idna==3.7
 inflection==0.5.1
+invoke==2.2.0
+ipython==8.27.0
 isort==5.13.2
+jedi==0.19.1
+matplotlib-inline==0.1.7
 mccabe==0.7.0
 mypy-extensions==1.0.0
+numpy==2.1.1
 oauthlib==3.2.2
 packaging==24.0
+pandas==2.2.2
+paramiko==3.5.0
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
+prompt_toolkit==3.0.47
 psycopg2==2.9.9
-pycodestyle==2.11.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycodestyle==2.12.1
 pycparser==2.22
 pydyf==0.11.0
 pyflakes==3.2.0
+Pygments==2.18.0
 PyJWT==2.8.0
+PyNaCl==1.5.0
 pyphen==0.16.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+sentry-sdk==2.14.0
 setuptools==70.0.0
 six==1.16.0
 social-auth-app-django==5.4.1
 social-auth-core==4.5.4
 sqlparse==0.5.0
+stack-data==0.6.3
 stripe==10.8.0
 tinycss2==1.3.0
+traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+wcwidth==0.2.13
 weasyprint==62.3
 webencodings==0.5.1
+wrapt==1.16.0
 zopfli==0.2.3
