--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==2.3.1
 bcrypt==4.2.0
 black==24.4.2
 Brotli==1.1.0
+cachetools==5.5.0
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -29,7 +30,14 @@ executing==2.1.0
 fabric==3.2.2
 flake8==7.0.0
 fonttools==4.53.1
+google-api-core==2.23.0
+google-api-python-client==2.153.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
 html5lib==1.1
+httplib2==0.22.0
 idna==3.7
 inflection==0.5.1
 invoke==2.2.0
@@ -40,26 +48,33 @@ matplotlib-inline==0.1.7
 mccabe==0.7.0
 mypy-extensions==1.0.0
 numpy==2.1.1
+oauth2client==4.1.3
 oauthlib==3.2.2
 packaging==24.0
 pandas==2.2.2
-paramiko==3.5.0
+paramiko==2.12.0
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
+proto-plus==1.25.0
+protobuf==5.28.3
 psycopg2==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycodestyle==2.12.1
 pycparser==2.22
+PyDrive==1.3.1
 pydyf==0.11.0
 pyflakes==3.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
 PyNaCl==1.5.0
+pyparsing==3.2.0
 pyphen==0.16.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
@@ -67,11 +82,8 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 requests-oauthlib==2.0.0
-<<<<<<< Updated upstream
+rsa==4.9
 sentry-sdk==2.14.0
-=======
-sentry-sdk==2.17.0
->>>>>>> Stashed changes
 setuptools==70.0.0
 six==1.16.0
 social-auth-app-django==5.4.1
